Empty divs next to arms

--- a/styles.css
+++ b/styles.css
@@ -47,16 +47,20 @@ img {
   display: flex;
   flex: 4;
   flex-direction: row;
-  /* colors to show where boxes are */
-  background-color: yellow;
 }
 .grid-shoulders {
   flex: 1;
-  background-color: white;
 }
 .grid-arms,
 .grid-arms2 {
   flex: 1;
+  background-color: burlywood;
+}
+
+.arms-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
 }
 
 .head-shoulders {
